# vulkan_tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  scene.yml
include/: basic_types.hpp  constants.hpp  helpers.hpp  io_types.hpp  live_view.hpp  runner.hpp  scene.hpp  timers.hpp  vulkan_compute.hpp
interface/: CMakeLists.txt  constants.json  io_types.json
shaders/: collision.glsl  constants.glsl  debug.glsl  glsl_builtin.h  io_types.glsl  main.glsl  material.glsl  random.glsl  ray.glsl  scene.glsl  sphere.glsl  trace.glsl  tracer.glsl
shaders/materials/: diffuse.glsl  fog.glsl  glass.glsl  light.glsl  material.glsl  mirror.glsl
shaders/shapes/: cloud.glsl  prism.glsl  sphere.glsl
shaders/types/: collision.glsl  ray.glsl
shaders/utils/: cie1931.glsl  colors.glsl  debug.glsl  random.glsl  vector_ops.glsl
src/: CMakeLists.txt  README.rst  helpers.cpp  live_view.cpp  main.cpp  runner.cpp  scene.cpp  scene_reader.cpp  timers.cpp  vulkan_compute.cpp
src/front/: CMakeLists.txt
src/front/include/: Arguments.hpp  Front.hpp
src/front/src/: Arguments.cpp  Front.cpp  Main.cpp  main.cpp
src/postprocessing/: CMakeLists.txt
src/postprocessing/include/postprocessing/: Approximation.hpp  Executor.hpp  GaussFilter.hpp  Task.hpp  Variance.hpp
src/postprocessing/src/: Approximation.cpp  Executor.cpp  GaussFilter.cpp
src/preview/: CMakeLists.txt
src/preview/include/preview/: Preview.hpp  Window.hpp
src/preview/src/: Preview.cpp  Window.cpp  live_view.cpp
src/runner/: CMakeLists.txt
src/runner/include/runner/: ComputeRunner.hpp  VulkanCompute.hpp
src/runner/src/: ComputeRunner.cpp  VulkanCompute.cpp
src/scene/: CMakeLists.txt
src/scene/include/scene/: Material.hpp  Reader.hpp  Scene.hpp  Shape.hpp  scene.hpp  scene_reader.hpp
src/scene/src/: Reader.cpp  Scene.cpp  scene.cpp  scene_reader.cpp
src/shaders/: CMakeLists.txt
src/shaders/src/: glsl_builtin.h  main.glsl  scene.glsl  trace.glsl
src/shaders/src/materials/: diffuse.glsl  fog.glsl  glass.glsl  light.glsl  material.glsl  mirror.glsl
src/shaders/src/shapes/: prism.glsl  sphere.glsl
src/shaders/src/types/: reflection.glsl
src/shaders/src/utils/: random.glsl  vector_ops.glsl
src/types/: CMakeLists.txt
src/types/include/types/: Image.hpp  RGBPixel.hpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: Helpers.hpp  Timers.hpp
src/utils/src/: Helpers.cpp  Timers.cpp
tool/: glsl_preprocessor.py  glslc_output_map.py  interface_generator.py  wrap_glsl_compiler
